...

                    TextEditor(text: $viewModel.entry)
                        .font(.body)
                        .frame(minWidth: 0, maxWidth: .infinity, minHeight: 75, maxHeight: 75)

                    HStack {
                        Button("Publish (⌘ Enter)", action: viewModel.publish)
                            .disabled(viewModel.networkActive || (viewModel.entry.count == 0 && viewModel.file == nil ))
                            .keyboardShortcut(.return, modifiers: [.command])

                        Button("Cancel", action: viewModel.cancel)
                            .keyboardShortcut(.escape)

...
